# tectonic

./: CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml  build_vst3.yml
packaging/: installer.iss
source/: AppTheme.h  ChromaCapsLookAndFeel.cpp  ChromaCapsLookAndFeel.h  OledDisplay.cpp  OledDisplay.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TectonicChannel.cpp  TectonicChannel.h
